# iot-venture-f25-misogaje

./: .gitignore  CI_README.md  README.md  clang-format  devices.csv  main.py  pyproject.toml  system diagram.pptm  west.yml
.github/workflows/: build.yml  ci-ncs.yml  ci.yml  main.yml
ADARFM/: CMakeLists.txt  prj.conf
ADARFM/boards/: nrf7002dk_nrf5340_cpuapp.overlay
ADARFM/src/: main.c
ADARFM_RX/: prj.conf
ADARFM_RX/boards/: nrf7002dk_nrf5340_cpuapp.overlay
ADARFM_RX/src/: main.c
Gabriel_misogate/: CMakeLists.txt  prj.conf
Gabriel_misogate/boards/: nrf7002dk_nrf5340_cpuapp.overlay
Gabriel_misogate/src/: crypto_min.c  crypto_min.h  (+6 more)
githooks/: install-hooks.sh  pre-commit  pre-push
magsens/: CMakeLists.txt  prj.conf
misogate/: CMakeLists.txt  Kconfig  overlay-memfault.conf  prj.conf  prj_comment.conf  sample.yaml  sysbuild.conf
misogate-prod/: CALIBRATION_REWRITE_SUMMARY.md  CMakeLists.txt  Kconfig  MIGRATION_TO_1D.md  TRIANGULATION_UPDATE.md  prj.conf  sample.yaml
misogate-prod/boards/: nrf7002dk_nrf5340_cpuapp_ns.conf  nrf7002dk_nrf5340_cpuapp_ns.overlay
misogate-prod/certs/: client-cert.pem  private-key.pem
misogate-prod/src/: crypto_min.c  crypto_min.h  main.c
misogate-prod/src/json_payload/: json_payload.c  json_payload.h
misogate-prod/src/lora/: calibration.c  calibration.h  crypto_min.c  crypto_min.h  lora.c  lora.h  packet.c  packet.h  position.c  position.h  siphash.c  siphash.h
misogate-prod/src/mqtt/: mqtt.c  mqtt.h
misogate/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_ns.conf
misogate/build_1/: CMakeCache.txt  build_info.yml  sysbuild_modules.txt  zephyr_modules.txt
misogate/build_1/Kconfig/: Kconfig.modules  Kconfig.sysbuild.modules  kconfig_module_dirs.cmake  kconfig_module_dirs.env
misogate/build_1/Kconfig/arch/: Kconfig
misogate/build_1/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.nrf7002dk  Kconfig.sysbuild
misogate/build_1/Kconfig/soc/: Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
misogate/build_1/zephyr/: edt.pickle  edt.pickle.cmake.new  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre
misogate/certs/: client-cert.pem  private-key.pem
misogate/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_trace_reason_user_config.def
misogate/src/: main.c  main_wifi.c  memfault_platform_config.h  mqtt.c  mqtt.h  wifi.c  wifi.h
misogate/src/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
misogate/src/json_payload/: json_payload.c
misogate/src/json_payload/memfault/: memfault_integration.c  memfault_integration.h
misogate/src/memfault/: memfault_integration.c  memfault_integration.h
misogate/src/mqtt/: mqtt.c  mqtt.h
misonode/: CMakeLists.txt
misoweb/: .env.example  .env.local.example  README.md  package.json
sentx/: CMakeLists.txt  prj.conf
tests/mmc5983ma_test/: CMakeLists.txt  prj.conf
tests/mmc5983ma_test/src/: test_mmc5983ma.c
tests/unit_test/: CMakeLists.txt  prj.conf
tests/unit_test/src/: main.c  test_json_payload.c
zephyr-wl/: lora_api.txt  radio_hits.txt
(+42 files in other folders)
